# result

./: CMakeLists.txt
include/: result.hpp  result.inl
include/result/: basic_error_category.hpp  basic_error_category.inl  declare_error_code.h  in_place_type.hpp  nodiscard.h  result_type.hpp  result_type.inl  to_result.hpp  type_traits.hpp  verify.h
